edos-project/envoy-gateway.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-gateway-config
  namespace: default
data:
  envoy.yaml: |
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    static_resources:
      listeners:
      - name: ingress_listener
        address:
          socket_address: { address: 0.0.0.0, port_value: 10000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              use_remote_address: true
              xff_num_trusted_hops: 1
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                  log_format:
                    json_format:
                      timestamp: "%START_TIME%"
                      client_ip: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                      method: "%REQ(:METHOD)%"
                      path: "%REQ(:PATH)%"
                      status: "%RESPONSE_CODE%"
                      user_agent: "%REQ(USER-AGENT)%"
                      host: "%REQ(:AUTHORITY)%"
                      content_encoding: "%RESP(CONTENT-ENCODING)%"
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: nginx_backend_cluster
                      rate_limits:
                      - actions:
                        - generic_key: { descriptor_value: "edos_target_limit" }
                      - actions:
                        - remote_address: {}
              http_filters:
              - name: envoy.filters.http.compressor
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                  response_direction_config:
                    common_config:
                      min_content_length: 100
                      content_type:
                      - text/html
                      - text/plain
                      - application/javascript
                    disable_on_etag_header: false
                  request_direction_config:
                    common_config:
                      enabled:
                        default_value: true
                        runtime_key: request_compressor_enabled
                  compressor_library:
                    name: text_optimized
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                      memory_level: 9
                      window_bits: 15
                      compression_level: BEST_COMPRESSION
                      compression_strategy: DEFAULT_STRATEGY
              - name: envoy.filters.http.local_ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                  stat_prefix: http_local_rate_limiter
                  token_bucket:
                    max_tokens: 1000
                    tokens_per_fill: 1100
                    fill_interval: 1s
                  filter_enabled:
                    runtime_key: local_rate_detector
                    default_value: { numerator: 100, denominator: HUNDRED }
                  filter_enforced:
                    runtime_key: local_rate_enforcer
                    default_value: { numerator: 100, denominator: HUNDRED }
              - name: envoy.filters.http.ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                  domain: nginx_edos_protection
                  rate_limit_service:
                    grpc_service:
                      envoy_grpc:
                        cluster_name: ratelimit_cluster
                    transport_api_version: V3
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain: { filename: "/etc/envoy/certs/tls.crt" }
                  private_key: { filename: "/etc/envoy/certs/tls.key" }
      clusters:
      - name: nginx_backend_cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: nginx_backend_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: nginx-backend-service
                    port_value: 80
      - name: ratelimit_cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: ratelimit_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ratelimit-service
                    port_value: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy-gateway
  template:
    metadata:
      labels:
        app: envoy-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9901"
        prometheus.io/path: "/stats/prometheus"
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.30.1
        ports:
        - containerPort: 10000
        - containerPort: 9901
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/envoy
        - name: certs-volume
          mountPath: /etc/envoy/certs
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: envoy-gateway-config
      - name: certs-volume
        secret:
          secretName: envoy-certs
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-external-service
  namespace: default
spec:
  externalTrafficPolicy: Local
  selector:
    app: envoy-gateway
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 10000
      nodePort: 32000
    - name: metrics
      protocol: TCP
      port: 9901
      targetPort: 9901
  type: NodePort
